# OOP_HW1

./: README.md  main.py  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  main_py.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_main_py.html  z_145eef247bfb46b6_product_py.html  z_a44f0ac069e85531___init___py.html  z_a44f0ac069e85531_test_first_py.html  z_a44f0ac069e85531_test_product_py.html
src/: 14.1_main.py  main.py  product.py
tests/: test_first.py  test_product.py
