[tool.poetry]
name = "oop-hw1"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13,<4.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
pytest = "^8.4.2"
pytest-cov = "^7.0.0"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
black = "^25.1.0"
mypy = "^1.18.1"
isort = "^6.0.1"

[[tool.poetry.packages]]
include = "src"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'

[tool.black]
line-length = 119
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | dist
  )/
  | foo.py

)
'''

[tool.isort]
line_length = 119                      # длина строки (уже есть у вас)
profile = "black"                      # совместимость с Black
multi_line_output = 3                  # стиль переноса импортов
skip_gitignore = true                  # игнорировать то, что в .gitignore
skip = [".git", ".mypy_cache"]         # явное игнорирование ненужных директорий
skip_glob = ["**/migrations/*", "**/settings/*"]  # шаблоны для игнорирования